stencils/adi/woven_code/.compile.err
warning: OpenMP support for version 51 in flang is still incomplete
error: Semantic errors in /root/polybench-metafor/stencils/adi/woven_code/adi.preproc.f90
/root/polybench-metafor/stencils/adi/woven_code/adi.preproc.f90:69:15: error: Canonical loop nest must be perfectly nested.
          !$omp tile sizes(32,32)
                ^^^^
